tests/semantic/invalid/test_type_mismatch.src
fn foo() : void {
    int x = 3.14;
}
